--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,29 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+:root,
+html[data-theme=light] {
+  --primary: #4b6bfb;
+  --primary-content: #fff;
+  --neutral: #181a2a;
+  --neutral-content: #e8e8ea;
+  --base-100: #fff;
+  --base-200: #f6f6f7;
+  --base-300: #e8e8ea;
+  --base-content: #97989f;
+}
+html[data-theme=dark] {
+  --primary: #4b6bfb;
+  --primary-content: #fff;
+  --neutral: #181a2a;
+  --neutral-content: #e8e8ea;
+  --base-100: #fff;
+  --base-200: #f6f6f7;
+  --base-300: #e8e8ea;
+  --base-content: #97989f;
+}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
