--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,13 @@ html[data-theme=dark] {
 
 body {
   max-width: 76rem;
+  margin: 0 auto;
+  border: 1px solid red;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  border: 1px solid blue;
 }
 
 /* ==========================================================================
