--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
 }
 nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   border: 1px solid blue;
 }
 
