--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,11 @@ body {
   border: 1px solid red;
   background: var(--base-100);
 }
+header {
+  padding-bottom: 1.5rem;
+}
 nav {
+  padding-block: 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
