--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ textarea {
 } */
 :root {
   --secondary-100: #f4f4f5;
+  --secondary-400: #a1a1aa;
   --secondary-600: #3b3c4a;
 }
 :root,
@@ -170,20 +171,33 @@ nav a {
   gap: 2.5rem;
 }
 .search-theme-div {
-  width: 20%;
+  width: 21%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .search-div {
   display: flex;
-  justify-content: center;
-  /* padding: .625rem; */
+  align-items: center;
+  padding: .125rem 0 .125rem .125rem;
   background: var(--secondary-100);
+  border-radius: .3125rem;
 }
 .search {
   border: none;
+  outline: none;
   background: var(--secondary-100);
+  padding: .5rem .75rem .5rem 1rem;
+  border-radius: .3125rem;
+}
+.search::placeholder {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: .875rem;
+  color: var(--secondary-400);
+}
+.search-icon {
+  padding-right: .625rem;
 }
 
 /* ==========================================================================
