--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,16 @@ nav a {
   border: 1px solid var(--secondary-100);
   border-radius: .75rem;
 }
+.hero-label {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 500;
+  font-size: .875rem;
+  padding: .25rem .625rem;
+  width: fit-content;
+  background: var(--primary);
+  color: var(--base-100);
+  border-radius: .375rem;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
