--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,11 @@ textarea {
   --secondary-100: #f4f4f5;
   --secondary-400: #a1a1aa;
   --secondary-600: #3b3c4a;
+
+  --regular: 400;
+  --medium: 600;
+  --semi-bold: 600;
+  --bold: 700;
 }
 :root,
 html[data-theme=light] {
@@ -153,7 +158,7 @@ header {
 }
 nav {
   font-family: "Work Sans", sans-serif;
-  font-weight: 400;
+  font-weight: var(--regular);
   padding-block: 2rem;
   display: flex;
   justify-content: space-between;
@@ -192,7 +197,7 @@ nav a {
 }
 .search::placeholder {
   font-family: "Inter", sans-serif;
-  font-weight: 400;
+  font-weight: var(--regular);
   font-size: .875rem;
   color: var(--secondary-400);
 }
@@ -212,13 +217,17 @@ nav a {
 }
 .hero-label {
   font-family: "Work Sans", sans-serif;
-  font-weight: 500;
+  font-weight: var(--regular);
   font-size: .875rem;
   padding: .25rem .625rem;
   width: fit-content;
   background: var(--primary);
   color: var(--base-100);
   border-radius: .375rem;
+}
+.hero-title {
+  font-family: "Work Sans", sans-serif;
+  font-weight: var(--semi-bold);
 }
 /* ==========================================================================
    Helper classes
