--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ textarea {
   --secondary-600: #3b3c4a;
 
   --regular: 400;
-  --medium: 600;
+  --medium: 500;
   --semi-bold: 600;
   --bold: 700;
 }
@@ -217,7 +217,7 @@ nav a {
 }
 .hero-label {
   font-family: "Work Sans", sans-serif;
-  font-weight: var(--regular);
+  font-weight: var(--medium);
   font-size: .875rem;
   padding: .25rem .625rem;
   width: fit-content;
@@ -228,6 +228,7 @@ nav a {
 .hero-title {
   font-family: "Work Sans", sans-serif;
   font-weight: var(--semi-bold);
+  line-height: 2.5rem;
 }
 /* ==========================================================================
    Helper classes
