--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,8 @@ textarea {
   font-style: normal;
 } */
 :root {
-  --secondary-100: #f4f4f5;
-  --secondary-400: #a1a1aa;
+  --secondary-100: #e8e8ea;
+  --secondary-400: #97989f;
   --secondary-600: #3b3c4a;
 
   --regular: 400;
@@ -229,6 +229,28 @@ nav a {
   font-family: "Work Sans", sans-serif;
   font-weight: var(--semi-bold);
   line-height: 2.5rem;
+}
+.author-date-div {
+  font-family: "Work Sans", sans-serif;
+  font-weight: var(--medium);
+  font-size: 1rem;
+  color: var(--secondary-400);
+  display: flex;
+  justify-content: space-between;
+  width: 62%;
+  gap: 1.25rem;
+}
+.author-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: fit-content;
+  gap: .75rem;
+}
+.author-div .avatar {
+  max-width: 2.25rem;
+  max-height: 2.25rem;
+  border-radius: 500%;
 }
 /* ==========================================================================
    Helper classes
