--- a/css/style.css
+++ b/css/style.css
@@ -251,11 +251,11 @@ nav a {
   font-family: "Work Sans", sans-serif;
   font-weight: var(--medium);
   font-size: 1rem;
-  color: var(--secondary-400);
+  color: var(--base-content);
   height: fit-content;
   display: flex;
-  justify-content: space-between;
-  width: 62%;
+  /* justify-content: space-between; */
+  width: 100%;
   gap: 1.25rem;
 }
 .author-date-div p {
