--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,9 @@ nav a {
 .hero-title {
   font-family: "Work Sans", sans-serif;
   font-weight: var(--semi-bold);
+  font-size: 2.25rem;
   line-height: 2.5rem;
+  letter-spacing: 0;
   margin-block: 1rem 1.5rem;
   color:var(--neutral);
 }
@@ -255,7 +257,7 @@ nav a {
   height: fit-content;
   display: flex;
   /* justify-content: space-between; */
-  width: 100%;
+  /* width: 100%; */
   gap: 1.25rem;
 }
 .author-date-div p {
