--- a/css/style.css
+++ b/css/style.css
@@ -243,9 +243,9 @@ nav a {
 .hero-title {
   font-family: "Work Sans", sans-serif;
   font-weight: var(--semi-bold);
-  font-size: 2.25rem;
+  /* font-size: 2.25rem; */
   line-height: 2.5rem;
-  letter-spacing: 0;
+  letter-spacing: -1px;
   margin-block: 1rem 1.5rem;
   color:var(--neutral);
 }
@@ -256,6 +256,7 @@ nav a {
   color: var(--base-content);
   height: fit-content;
   display: flex;
+  align-items: center;
   /* justify-content: space-between; */
   /* width: 100%; */
   gap: 1.25rem;
@@ -275,6 +276,7 @@ nav a {
   max-height: 2.25rem;
   border-radius: 500%;
 }
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
