--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ nav a {
 }
 .search-icon {
   /* padding-right: .625rem; */
-  padding-right: 1rem;
+  margin-right: .625rem;
 }
 .hero {
   display: flex;
