--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ nav a {
   background: var(--secondary-100);
   border-radius: 100px;
 }
-#theme-btn {
+.theme-toggle {
   display: inline;
   /* width: 1.5rem; */
   height: auto;
