--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,8 @@ textarea {
   --medium: 500;
   --semi-bold: 600;
   --bold: 700;
+  --scale-x: 1;
+	--scale-y: 1;
 }
 :root,
 html[data-theme=light] {
@@ -214,14 +216,71 @@ nav a {
   background: var(--secondary-100);
   border-radius: 100px;
 }
-.theme-toggle {
+/* .theme-toggle {
   display: inline;
-  /* width: 1.5rem; */
+  width: 1.5rem;
   height: auto;
   margin: .125rem;
   border-radius: 100%;
   background: white;
+} */
+
+/* Sun Icon (sichtbar im Dark Mode) */
+[data-theme="dark"] .sun-icon {
+	--tw-scale-x: 100%;
+	--tw-scale-y: 100%;
+	scale: var(--scale-x) var(--scale-y);
+	rotate: 0deg;
 }
+
+[data-theme="light"] .sun-icon {
+	--tw-scale-x: 0%;
+	--tw-scale-y: 0%;
+	scale: var(--scale-x) var(--scale-y);
+	rotate: 90deg;
+}
+
+/* Moon Icon (sichtbar im Light Mode) */
+[data-theme="dark"] .moon-icon {
+	--tw-scale-x: 0%;
+	--tw-scale-y: 0%;
+	scale: var(--scale-x) var(--scale-y);
+	rotate: -90deg;
+}
+
+[data-theme="light"] .moon-icon {
+	--tw-scale-x: 100%;
+	--tw-scale-y: 100%;
+	scale: var(--tw-scale-x) var(--tw-scale-y);
+	rotate: 0deg;
+}
+
+.moon-icon {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	--translate-x: calc(50% * -1);
+	--translate-y: calc(50% * -1);
+	translate: var(--translate-x) var(--translate-y);
+	--tw-scale-x: 100%;
+	--tw-scale-y: 100%;
+	scale: var(--scale-x) var(--scale-y);
+	rotate: 0deg;
+}
+
+.sun-icon {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	--translate-x: calc(50% * -1);
+	--translate-y: calc(50% * -1);
+	translate: var(--translate-x) var(--translate-y);
+	--scale-x: 0%;
+	--scale-y: 0%;
+	scale: var(--scale-x) var(--scale-y);
+	rotate: 90deg;
+}
+
 .hero {
   display: flex;
   max-height: 41.5rem;
