--- a/css/style.css
+++ b/css/style.css
@@ -229,31 +229,31 @@ nav a {
 
 /* Sun Icon (sichtbar im Dark Mode) */
 [data-theme="dark"] .sun-icon {
-	--tw-scale-x: 100%;
-	--tw-scale-y: 100%;
+	--scale-x: 100%;
+	--scale-y: 100%;
 	scale: var(--scale-x) var(--scale-y);
 	rotate: 0deg;
 }
 
 [data-theme="light"] .sun-icon {
-	--tw-scale-x: 0%;
-	--tw-scale-y: 0%;
+	--scale-x: 0%;
+	--scale-y: 0%;
 	scale: var(--scale-x) var(--scale-y);
 	rotate: 90deg;
 }
 
 /* Moon Icon (sichtbar im Light Mode) */
 [data-theme="dark"] .moon-icon {
-	--tw-scale-x: 0%;
-	--tw-scale-y: 0%;
+	--scale-x: 0%;
+	--scale-y: 0%;
 	scale: var(--scale-x) var(--scale-y);
 	rotate: -90deg;
 }
 
 [data-theme="light"] .moon-icon {
-	--tw-scale-x: 100%;
-	--tw-scale-y: 100%;
-	scale: var(--tw-scale-x) var(--tw-scale-y);
+	--scale-x: 100%;
+	--scale-y: 100%;
+	scale: var(--scale-x) var(--scale-y);
 	rotate: 0deg;
 }
 
@@ -264,8 +264,8 @@ nav a {
 	--translate-x: calc(50% * -1);
 	--translate-y: calc(50% * -1);
 	translate: var(--translate-x) var(--translate-y);
-	--tw-scale-x: 100%;
-	--tw-scale-y: 100%;
+	--scale-x: 100%;
+	--scale-y: 100%;
 	scale: var(--scale-x) var(--scale-y);
 	rotate: 0deg;
 }
