--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ nav a {
 	rotate: 0deg;
 }
 
-.moon-icon {
+/* .moon-icon {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -281,7 +281,7 @@ nav a {
 	--scale-y: 0%;
 	scale: var(--scale-x) var(--scale-y);
 	rotate: 90deg;
-}
+} */
 
 .hero {
   display: flex;
