--- a/css/style.css
+++ b/css/style.css
@@ -238,8 +238,9 @@ nav a {
 .theme-btn {
 	position: relative;
 	cursor: pointer;
-	width: calc(var(--spacing) * 12);
-	height: calc(var(--spacing) * 12);
+  border: none;
+	width: calc(var(--spacing) * 6);
+	height: calc(var(--spacing) * 6);
 	/* padding: calc(var(--spacing) * 2); */
 }
 
